--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -6,13 +6,6 @@
 # Contributor: Thomas Baechler <thomas@archlinux.org>
 
 ### Selecting the CPU scheduler
-# ATTENTION - one of seven predefined values should be selected!
-# 'bmq' - select 'BitMap Queue CPU scheduler'
-# 'pds' - select 'Priority and Deadline based Skip list multiple queue CPU scheduler'
-# 'cacule' - select 'CacULE scheduler'
-# 'cacule-rdb' - select 'CacULE-RDB scheduler'
-# 'bore' - select 'Burst-Oriented Response Enhancer'
-# 'tt' - select 'Task Type Scheduler by Hamad Marri'
 # 'cfs' - select 'Completely Fair Scheduler'
 _cpusched='cfs'
 
@@ -26,9 +19,6 @@ _makemenuconfig=
 # A single multi-core CPU actually runs slower with NUMA enabled.
 # See, https://bugs.archlinux.org/task/31187
 _NUMAdisable=y
-
-## Enable Anbox
-_anbox=
 
 # Compile ONLY used modules to VASTLYreduce the number of modules built
 # and the build time.
@@ -78,7 +68,10 @@ _lrng_enable=
 _use_auto_optimization=y
 
 ## Apply Kernel Optimization selecting
-_use_optimization_select=
+_use_optimization_select=y
+
+# disable debug to lower the size of the kernel
+_disable_debug=
 
 ## Enable zram/zswap ZSTD compression
 _zstd_compression=y
@@ -93,16 +86,23 @@ _use_llvm_lto=
 ## Change the thin lto cachedir for fixing building several dkms modules including zfs
 _thin_lto_cachedir=
 
-## Enable it for using the LLVM CFI PATCH for a better security
-_use_cfi=
+# KCFI is a proposed forward-edge control-flow integrity scheme for
+# Clang, which is more suitable for kernel use than the existing CFI
+# scheme used by CONFIG_CFI_CLANG. KCFI doesn't require LTO, doesn't
+# alter function references to point to a jump table, and won't break
+# function address equality.
+# ATTENTION!: you do need a patched llvm for the usage of kcfi,
+# you can find a patched llvm-git in the cachyos-repo's.
+# The packagename is called "llvm-kcfi"
+_use_kcfi=
 
 if [ -n "$_use_llvm_lto" ]; then
   pkgbase=linux-nspa-lto
 else
   pkgbase=linux-nspa
 fi
-_major=5.17
-_minor=11
+_major=5.18
+_minor=1
 #_minorc=$((_minor+1))
 #_rcver=rc8
 pkgver=${_major}.${_minor}
@@ -125,18 +125,21 @@ fi
 source=(
   "https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz"
   "config"
-  "0001-arch.patch"
-  "0002-acpi_cppc-amd-pstate.patch"
+  "auto-cpu-optimization.sh"
+  "0001-amd-perf.patch"
   "0003-bbr2.patch"
   "0004-cachy.patch"
-  "0005-peterz-sched-migrate.patch"
-  "0006-clearlinux-all.patch"
-  "0007-more-uarches-for-kernel-5.17+.patch"
-  "0008-fixes-miscellaneous.patch"
-  "0009-fs-patches.patch"
-  "0010-hwmon.patch"
-  "0015-ck-hrtimer.patch"
-  "auto-cpu-optimization.sh"
+  "0005-clearlinux.patch"
+  "0006-Extend-DAMOS-for-Proactive-LRU-lists-Sorting.patch"
+  "0007-fixes.patch"
+  "0008-futex-winesync.patch"
+  "0009-hwmon.patch"
+  "0010-kbuild.patch"
+  "0011-ksm.patch"
+  "0012-lrng.patch"
+  "0013-MG-lru-5.18.patch"
+  "0014-zram-entropy-calculation.patch"
+  "0015-more-uarches-for-kernel-5.17+.patch"
   "0016-mm-Support-soft-dirty-flag-reset-for-VA-range.patch"
   "0017-mm-Support-soft-dirty-flag-read-with-reset.patch"
   "0018-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
@@ -144,19 +147,28 @@ source=(
   "0020-amd_pinctrl-IRQF_NO_THREAD.patch"
   "0021-designware-i2c_IRQF_NO_THREAD.patch"
   "0022-background_reclaim_of_hugepages.patch"
-  "0023-patch-5.17.1-rt17.patch"
+  "0023-patch-5.18-rt11.patch"
   "0024-Reduce-SCHED_RR-timeslice-100-ms-10-jiffy.patch"
-  "0025-v5.17-winesync.patch"
   "0026-mm-ncrease_max_map_count.patch"
-  "0027-mm-MG-Lru-5.17.y-patchset.patch"
   "0028-mm-vmscan-add-sysctl-knobs-for-protecting-the-workin.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
     BUILD_FLAGS=(
+        CC=clang
+        LD=ld.lld
         LLVM=1
         LLVM_IAS=1
     )
+fi
+if [ -n "$_use_kcfi" ]; then
+source+=("0001-kcfi.patch")
+depends+=(clang llvm lld python)
+BUILD_FLAGS=(
+    CC=clang
+    LD=ld.lld
+    LLVM=1
+)
 fi
 
 export KBUILD_BUILD_HOST=archlinux
@@ -213,10 +225,6 @@ prepare() {
         scripts/config --enable CACULE_SCHED \
                        --enable CACULE_RDB \
                        --set-val RDB_INTERVAL 19
-    elif [ "$_cpusched" = "tt" ]; then
-        echo "Enable TT CPU scheduler..."
-        scripts/config --enable TT_SCHED \
-                       --enable TT_ACCOUNTING_STATS
     elif [ "$_cpusched" = "bore" ]; then
         echo "Selecting BORE Scheduler..."
         scripts/config --enable SCHED_BORE
@@ -232,11 +240,11 @@ prepare() {
         exit
     fi
 
-#    if [ -n "$_use_cfi" ] && [ -n "$_use_llvm_lto" ]; then
-#        echo "Enabling CFI"
-#        scripts/config --enable ARCH_SUPPORTS_CFI_CLANG \
-#                       --enable CFI_CLANG
-#    fi
+    if [ -n "$_use_kcfi" ]; then
+        echo "Enabling kCFI"
+        scripts/config --enable ARCH_SUPPORTS_CFI_CLANG \
+                       --enable CFI_CLANG
+    fi
 
     if [ "$_use_llvm_lto" = "thin" ]; then
         echo "Enabling LLVM THIN LTO..."
@@ -477,24 +485,27 @@ prepare() {
                        --set-str ZSWAP_COMPRESSOR_DEFAULT zstd
     fi
 
-    if [ -n "$_anbox" ]; then
-        echo "Enable Anbox..."
-        scripts/config --enable ASHMEM \
-                       --enable ANDROID \
-                       --enable ANDROID_BINDER_IPC \
-                       --enable ANDROID_BINDERFS \
-                       --enable ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+    if [ -n "$_disable_debug" ]; then
+    scripts/config --disable DEBUG_INFO \
+                       --disable DEBUG_INFO_BTF \
+                       --disable DEBUG_INFO_DWARF4 \
+                       --disable DEBUG_INFO_DWARF5 \
+                       --disable PAHOLE_HAS_SPLIT_BTF \
+                       --disable DEBUG_INFO_BTF_MODULES \
+                       --disable SLUB_DEBUG \
+                       --disable PM_DEBUG \
+                       --disable PM_ADVANCED_DEBUG \
+                       --disable PM_SLEEP_DEBUG \
+                       --disable ACPI_DEBUG \
+                       --disable SCHED_DEBUG \
+                       --disable LATENCYTOP \
+                       --disable DEBUG_PREEMPT
     fi
 
-    scripts/config --disable DEBUG_INFO \
-                   --disable DEBUG_INFO_BTF \
-                   --disable DEBUG_INFO_DWARF4 \
-                   --disable PAHOLE_HAS_SPLIT_BTF \
-                   --disable DEBUG_INFO_BTF_MODULES
-
+    echo "Enable ZRAM_ENTROPY"
+	  scripts/config --enable ZRAM_ENTROPY
     echo "Enable USER_NS_UNPRIVILEGED"
     scripts/config --enable USER_NS
-
     echo "Enable WINE FASTSYNC"
     scripts/config --enable WINESYNC
 
@@ -667,20 +678,23 @@ for _p in "${pkgname[@]}"; do
     }"
 done
 
-sha256sums=('5708e656fae734c3a7b27718345b29e2f7bfd06dfb85acdffca0ba4505f81b31'
-            'dfd00f62eb5073157b35bbb56a06b5594350f134e3a6134e5298968f5a6208d3'
-            '09aa0e17190ee113a352573b2d2386cc04b522641fd277306e8ace9fd7af0037'
-            'fa93aace08804d4570b14c59d17fe0451d47030fa40c79b9abd890d5633d9ca2'
-            '6b31e4655e5ff9dbe95fb7db665426dad2bf3e33b5102d040a256f707cc99a23'
-            '8d327824362a7484bf7a8e4bfbe37e969ee39bbbb1c09c9e1e909b7e5941240d'
-            '543209b77159e768a105ac41bd3c760380ef73e97dabd53d958e0bdb024ddf1d'
-            '6459c08b26ef7546899e87005a8d8fd518fdbe59425218872846292b78ec4ec3'
-            '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
-            '6bb7e313105f4315d070503f31d1f9a1415f1b92692041c92f5b6aa1eabfe135'
-            '12ebabff02f66e1583232591fc4ddf09c6437f11a4c59045d6d50d4be0f3693e'
-            '648063b388a87acc28546677ad5cb85d475204024275ebb44ba4d389862b280b'
-            '07e34ca2f03d96837166ff4764503a76ff6f499107716455073e5e081b40a146'
+sha256sums=('83d14126c660186a7a1774a4a5c29d38e170fa5e52cfd2d08fd344dcf1f57d22'
+            '56b5bb54c5d4bb25774f4777c951a08156ad295d747700692719b6a0aa0d1860'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
+            '9824cd3a41db040bf28d6538aa4805f869333139cbcf43e0422e1b42f5401270'
+            '56f58801a73e6d930d7680806dc734b50b69617a0eef96244627d7a946b62efd'
+            '09d2b3d6b919091f0f313609bdfd7603bfaa8765f0edeaf15efca2aec78284eb'
+            '3e217f0cb056bd823b0d593e5fb66e6acd891a21e1ba6343b7b976c4f9075521'
+            '30fd4ca078cb1eee0bc4005700da4d15515a577ccdb96ea7922040aa9086d6b7'
+            'abc95e53c38673adb1be0f961c1ce1b5fdc22d150149bffae4b70a21201bc726'
+            'fa8beb48c2e78f5337c6b08d1b6b6575bd01e2f34673d4056f35a1b28165d1ce'
+            'c1aae07261bafc711c2d66e26c2c30e444e11509cacc7aec148dc021761294cd'
+            '17e8ec78d3df7a1965d3b1667c3323479e94c15a6d3fe59ba17cd73f06a21394'
+            '8edf9b9b1a9c26cc4d6dfaf5f14c06b197a04c5bbb8459dd292c033aa2534d19'
+            '65a1a31af7923f5f99b11fe45305f176d75904e05addff168d09517c403e45e1'
+            '97d8b95e9f8880e9ec0d31b62263cac21f29c89e4ac2c2c4bedbe5989d5a9847'
+            'efe8558b63feb0e76b61d69952c5300ad54c951d9044101be7c01932a54fb4fb'
+            '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'cee94fce396530325bde74e53cae9108f2804fedb55b7ba56539e94a034ce5c8'
             '28c24f4cd4faac8a5562b4faf1c3b04c93ed0ea0317706b3553e48e26284e7d9'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
@@ -688,10 +702,8 @@ sha256sums=('5708e656fae734c3a7b27718345b29e2f7bfd06dfb85acdffca0ba4505f81b31'
             '20610d060e4e57762081f66b3a51017047d44e73a778879144c8061b8b3b35d7'
             '669b53108abadfd377617445f6a3f0cb9de74e649b3e62be1168a1c8c579a358'
             '36928ee323a84d8eb75460619b8e2b6493ea6e03f438c0820f73aa79a58cf9b2'
-            '4382974175e32abd2ce6fc47a83b4e0d48f480cb3ec7b04c5251269ba15b9abd'
+            '2583ef57b52cc782c20fc491e91a0c843f4d3b98d9ca7b3e5e763bb1a217b5f0'
             '05616703ad898f967b7055bdc6dc6c5aab33257005c2ef9d87d55af15c12927b'
-            'eb20460f3c471b8ba5f8afef2f9af70a57f797e419e71d3e00855649e63d5c7d'
             '925b3edafe5aae0e577a5a51f653ef0a93d4299c44e9dcba13882010d4bc58ee'
-            'd3ac929b5a2ecce0a02be5749ca903cca1717a50fa8dd86375d42cafdaf645ac'
             '5b1a8092837cd06a57becbe8cace02c7da445761e0e6d53ea25d9f966b57ab3b')
 
