--- a/linux-nspa/config
+++ b/linux-nspa/config
@@ -476,7 +476,7 @@ CONFIG_PERF_EVENTS_INTEL_RAPL=m
 # CONFIG_PERF_EVENTS_INTEL_CSTATE is not set
 # CONFIG_PERF_EVENTS_AMD_POWER is not set
 # CONFIG_PERF_EVENTS_AMD_UNCORE is not set
-# CONFIG_PERF_EVENTS_AMD_BRS is not set
+CONFIG_PERF_EVENTS_AMD_BRS=y
 # end of Performance monitoring
 
 CONFIG_X86_16BIT=y
