--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -127,17 +127,17 @@ source=(
   "config"
   "auto-cpu-optimization.sh"
   "0001-amd-perf.patch"
-  "0002-bbr2.patch"
+  "0002-net-bbr-netfilter.patch"
   "0003-cachy.patch"
   "0004-clearlinux.patch"
   "0005-Extend-DAMOS-for-Proactive-LRU-lists-Sorting.patch"
-  "0006-fixes.patch"
+  "0006-misc-fixes.patch"
   "0007-futex-winesync.patch"
-  "0008-hwmon.patch"
-  "0009-kbuild.patch"
-  "0010-ksm.patch"
-  "0011-lrng.patch"
-  "0012-MG-lru-5.18.patch"
+  "0008-kbuild-dev-squashed.patch"
+  "0009-gcc-enable_03_level_optimization.patch"
+  "0010-ksm-patchwork.patch"
+  "0011-lrng-patchwork.patch"
+  "0012-MG-lru-5.18-patchwork.patch"
   "0013-zram-entropy-calculation.patch"
   "0014-more-uarches-for-kernel-5.17+.patch"
   "0015-mm-Support-soft-dirty-flag-reset-for-VA-range.patch"
@@ -680,24 +680,24 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('83d14126c660186a7a1774a4a5c29d38e170fa5e52cfd2d08fd344dcf1f57d22'
-            '10aa97a84f53e8a8e21bb0fe96fe842b6ebd536f77fb7e2b91fc36960fc80d69'
+            'cade179e64f14b137eac5a7451901ce7c095c379360bd55531bce026aca88aab'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
             '9824cd3a41db040bf28d6538aa4805f869333139cbcf43e0422e1b42f5401270'
-            '56f58801a73e6d930d7680806dc734b50b69617a0eef96244627d7a946b62efd'
+            'd20be9d0cf4eb7e740c0e6a3a6fbb536f19fa0ba6ecce8dac7daa139de9f06bb'
             '09d2b3d6b919091f0f313609bdfd7603bfaa8765f0edeaf15efca2aec78284eb'
-            '3e217f0cb056bd823b0d593e5fb66e6acd891a21e1ba6343b7b976c4f9075521'
+            'aa39284c739ab69f484f77a93351817e7040c5a52e511fa991c2a3349bf3f5e5'
             '30fd4ca078cb1eee0bc4005700da4d15515a577ccdb96ea7922040aa9086d6b7'
-            'abc95e53c38673adb1be0f961c1ce1b5fdc22d150149bffae4b70a21201bc726'
+            'e2e70ccbdbff1d47be9de63eb302a5ff3e5eeaaec5b2a63f85d776b08e83007e'
             'fa8beb48c2e78f5337c6b08d1b6b6575bd01e2f34673d4056f35a1b28165d1ce'
-            'c1aae07261bafc711c2d66e26c2c30e444e11509cacc7aec148dc021761294cd'
             '17e8ec78d3df7a1965d3b1667c3323479e94c15a6d3fe59ba17cd73f06a21394'
+            'a98c705ab8910e6e4cb3a85c04a85cc8083a1851129e033262685a6013277335'
             '8edf9b9b1a9c26cc4d6dfaf5f14c06b197a04c5bbb8459dd292c033aa2534d19'
             '65a1a31af7923f5f99b11fe45305f176d75904e05addff168d09517c403e45e1'
             '97d8b95e9f8880e9ec0d31b62263cac21f29c89e4ac2c2c4bedbe5989d5a9847'
             'efe8558b63feb0e76b61d69952c5300ad54c951d9044101be7c01932a54fb4fb'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'cee94fce396530325bde74e53cae9108f2804fedb55b7ba56539e94a034ce5c8'
-            '28c24f4cd4faac8a5562b4faf1c3b04c93ed0ea0317706b3553e48e26284e7d9'
+            'bb171e80bb75aca76b4f3b16bda1af6d3469d5fc7cf2b820387217d79623cc44'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
             'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
             '20610d060e4e57762081f66b3a51017047d44e73a778879144c8061b8b3b35d7'
