--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -113,7 +113,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=15
+pkgrel=16
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -154,6 +154,7 @@ source=(
   "0025-mm-vmscan-add-sysctl-knobs-for-protecting-the-workin.patch"
   "0026-mm-lru_cache_disable-use-synchronize_rcu_expedited.patch"
   "0027-rtw88-patches.patch"
+  "0028-sched_migrate-peterz.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -711,5 +712,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '925b3edafe5aae0e577a5a51f653ef0a93d4299c44e9dcba13882010d4bc58ee'
             '5b1a8092837cd06a57becbe8cace02c7da445761e0e6d53ea25d9f966b57ab3b'
             'e3e055b92ab8455c8d27f2033db23c32e3914465a7e7077743097dd9e1beb62c'
-            '7e896d6a9d3e6de9bf826597be146862683457344201ffd977d4625c9a361d41')
+            '7e896d6a9d3e6de9bf826597be146862683457344201ffd977d4625c9a361d41'
+            '059dc136634bce808574fae3992d4168104d66c2dc95dacf7cf82c3ae7049af8')
 
