--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -113,7 +113,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=16
+pkgrel=17
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -151,8 +151,9 @@ source=(
   "0023-Reduce-SCHED_RR-timeslice-100-ms-10-jiffy.patch"
   "0024-mm-ncrease_max_map_count.patch"
   "0025-mm-vmscan-add-sysctl-knobs-for-protecting-the-workin.patch"
-  "0026-mm-lru_cache_disable-use-synchronize_rcu_expedited.patch"
   "0028-sched_migrate-peterz.patch"
+  "0029-urgentfixes.patch"
+  "0030-rcu-fixups.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -708,6 +709,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '05616703ad898f967b7055bdc6dc6c5aab33257005c2ef9d87d55af15c12927b'
             '925b3edafe5aae0e577a5a51f653ef0a93d4299c44e9dcba13882010d4bc58ee'
             '5b1a8092837cd06a57becbe8cace02c7da445761e0e6d53ea25d9f966b57ab3b'
-            'e3e055b92ab8455c8d27f2033db23c32e3914465a7e7077743097dd9e1beb62c'
-            '059dc136634bce808574fae3992d4168104d66c2dc95dacf7cf82c3ae7049af8')
+            '059dc136634bce808574fae3992d4168104d66c2dc95dacf7cf82c3ae7049af8'
+            '85105c454392a9cc2262036fb97ac96a6e38bcb3af6ea278007a179bd224d61d'
+            '84350de930b027812c99e741a52ec1f93d532e08c3bc447bd6ad2d59d43dedea')
 
