--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -37,9 +37,6 @@ _localmodcfg=
 # a new kernel is released, but again, convenient for package bumps.
 _use_current=
 
-### Enable KBUILD_CFLAGS -O3
-_cc_harder=y
-
 ### Running with a 1000HZ, 750Hz or  500HZ tick rate
 _1k_HZ_ticks=y
 _750_HZ_ticks=
@@ -66,9 +63,6 @@ _lrng_enable=
 
 ## Apply Kernel automatic Optimization
 _use_auto_optimization=y
-
-## Apply Kernel Optimization selecting
-_use_optimization_select=y
 
 # disable debug to lower the size of the kernel
 _disable_debug=
@@ -113,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=17
+pkgrel=18
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -135,10 +129,8 @@ source=(
   "0006-misc-fixes.patch"
   "0007-futex-winesync.patch"
   "0008-kbuild-dev-squashed.patch"
-  "0010-ksm-patchwork.patch"
   "0011-lrng-patchwork.patch"
   "0012-MG-lru-5.18-patchwork.patch"
-  "0013-zram-entropy-calculation.patch"
   "0014-more-uarches-for-kernel-5.17+.patch"
   "0015-mm-Support-soft-dirty-flag-reset-for-VA-range.patch"
   "0016-mm-Support-soft-dirty-flag-read-with-reset.patch"
@@ -153,7 +145,9 @@ source=(
   "0025-mm-vmscan-add-sysctl-knobs-for-protecting-the-workin.patch"
   "0028-sched_migrate-peterz.patch"
   "0029-urgentfixes.patch"
-  "0030-rcu-fixups.patch"
+  "0030-rcu-gp-workers.patch"
+  "0031-smp-migrate_disable.patch"
+  "0032-ck-hrtimer-5.18.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -201,46 +195,6 @@ prepare() {
 
     if [ -n "$_use_auto_optimization" ]; then
         "${srcdir}"/auto-cpu-optimization.sh
-    fi
-
-    if [ -n "$_use_optimization_select" ]; then
-        source "${startdir}"/configure
-        cpu_arch
-    fi
-
-    ### Selecting the CPU scheduler
-    if [ "$_cpusched" = "bmq" ]; then
-        echo "Selecting BMQ CPU scheduler..."
-        scripts/config --enable SCHED_ALT \
-                       --enable SCHED_BMQ \
-                       --disable SCHED_PDS
-    elif [ "$_cpusched" = "pds" ]; then
-        echo "Selecting PDS CPU scheduler..."
-        scripts/config --enable SCHED_ALT \
-                       --disable SCHED_BMQ \
-                       --enable SCHED_PDS
-    elif [ "$_cpusched" = "cacule" ]; then
-        echo "Selecting CacULE scheduler..."
-        scripts/config --enable CACULE_SCHED \
-                       --disable CACULE_RDB
-    elif [ "$_cpusched" = "cacule-rdb" ]; then
-        echo "Selecting CacULE-RDB scheduler..."
-        scripts/config --enable CACULE_SCHED \
-                       --enable CACULE_RDB \
-                       --set-val RDB_INTERVAL 19
-    elif [ "$_cpusched" = "bore" ]; then
-        echo "Selecting BORE Scheduler..."
-        scripts/config --enable SCHED_BORE
-    elif [ "$_cpusched" = "cfs" ]; then
-        echo "Selecting Completely Fair Scheduler..."
-    else
-        if [ -n "$_cpusched" ]; then
-            error "The value $_cpusched is invalid. Choose the correct one again."
-        else
-            error "The value is empty. Choose the correct one again."
-        fi
-        error "Selecting the CPU scheduler failed!"
-        exit
     fi
 
     if [ -n "$_use_kcfi" ]; then
@@ -386,12 +340,6 @@ prepare() {
                        --disable PREEMPT_COUNT \
                        --disable PREEMPTION \
                        --disable PREEMPT_DYNAMIC
-    fi
-
-    if [ -n "$_cc_harder" ]; then
-        echo "Enabling KBUILD_CFLAGS -O3..."
-        scripts/config --disable CC_OPTIMIZE_FOR_PERFORMANCE \
-                       --enable CC_OPTIMIZE_FOR_PERFORMANCE_O3
     fi
 
     if [ -n "$_tcp_bbr2" ]; then
@@ -691,12 +639,10 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'aa39284c739ab69f484f77a93351817e7040c5a52e511fa991c2a3349bf3f5e5'
             '30fd4ca078cb1eee0bc4005700da4d15515a577ccdb96ea7922040aa9086d6b7'
             '36c0731e1dd73098a059de0fdfedfc1099f07ec15c1475abbb3e331d26f3cbc8'
-            'fa8beb48c2e78f5337c6b08d1b6b6575bd01e2f34673d4056f35a1b28165d1ce'
+            'cb3c84b52040c6bfe640e408c95b93c9fc64741d62513903a33ba7a0c9020d5e'
             '17e8ec78d3df7a1965d3b1667c3323479e94c15a6d3fe59ba17cd73f06a21394'
-            '8edf9b9b1a9c26cc4d6dfaf5f14c06b197a04c5bbb8459dd292c033aa2534d19'
             '65a1a31af7923f5f99b11fe45305f176d75904e05addff168d09517c403e45e1'
             '97d8b95e9f8880e9ec0d31b62263cac21f29c89e4ac2c2c4bedbe5989d5a9847'
-            '898fad1d569514561b8333e056952857f5127d9ba45e9e9dbf185b33ceceb3dc'
             '8d4a22387dbe7a9f339555c99bd70c55c033422026244b98cbfd93eb39fb99c2'
             'cbb410b35e4edd38a308f6f9aaffd1f4d754eb27f3decadb662695100f5e4c1c'
             'e173eebbce9cbea24db4f150731f1e34341fbb75b8b8be00288243fcdcb8326b'
@@ -711,5 +657,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '5b1a8092837cd06a57becbe8cace02c7da445761e0e6d53ea25d9f966b57ab3b'
             '059dc136634bce808574fae3992d4168104d66c2dc95dacf7cf82c3ae7049af8'
             '85105c454392a9cc2262036fb97ac96a6e38bcb3af6ea278007a179bd224d61d'
-            '84350de930b027812c99e741a52ec1f93d532e08c3bc447bd6ad2d59d43dedea')
+            '113aa7bf02c3f04ddfc221a5c4b38ac36cd83fbed8bbd6c9c9deaf0a1cf35780'
+            '9c2dee249ba6fd79eb8d8142a4591e6a64d88d44d2bf49d486499f70c31b5bf3'
+            '40b64437a72105b2afeab873614fa93e5ab6b6c05d3b0d1981dd9dec935745a4')
 
