--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=18
+pkgrel=19
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -150,6 +150,7 @@ source=(
   "0032-ck-hrtimer-5.18.patch"
   "0033-rtmutex-no-rcu-lock-while-spinning.patch"
   "0034-tk-timekeeping-suspend-fixes.patch"
+  "0035-sched-5.19-rc2.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -650,7 +651,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'e173eebbce9cbea24db4f150731f1e34341fbb75b8b8be00288243fcdcb8326b'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
             'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
-            '22720d53d1d29743cba8effa14ac70c946c6285d1465d3d287156c6e1eccfe3c'
+            '6f9332263bf2e052c5dfab994a5bd6876f227998f1e825c7943c9f2236d2132f'
             '8e5edc5ae5282fae35684006f0aeea41c16523dc0482891dc6c15e40e87f6a53'
             '36928ee323a84d8eb75460619b8e2b6493ea6e03f438c0820f73aa79a58cf9b2'
             '2583ef57b52cc782c20fc491e91a0c843f4d3b98d9ca7b3e5e763bb1a217b5f0'
@@ -662,6 +663,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '113aa7bf02c3f04ddfc221a5c4b38ac36cd83fbed8bbd6c9c9deaf0a1cf35780'
             '9c2dee249ba6fd79eb8d8142a4591e6a64d88d44d2bf49d486499f70c31b5bf3'
             '40b64437a72105b2afeab873614fa93e5ab6b6c05d3b0d1981dd9dec935745a4'
-            '0070044800a43bed29ed423236147254d9598507e5d005c3d4139e67b8733041'
-            '48e1e5bda462acdf775343c1235023ba1b7f4811358407752cf3fb88028d2225')
+            '53bc1fc5f0c44072222c67ce5fa53a729643d5269d391b742bab1834bfe4d313'
+            '2b0897c7ce14feef108c856abed79de52a761a3001f9c835e1f857d1ff275ae3'
+            'beed03117075405d7d0cf6c6f4a81045497039e63b62b319de698e91be3a53eb')
 
