--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=19
+pkgrel=20
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -136,7 +136,8 @@ source=(
   "0016-mm-Support-soft-dirty-flag-read-with-reset.patch"
   "0017-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
   "0018-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
-  "0019-amd_pinctrl-IRQF_NO_THREAD.patch"
+  "0019-pinctl-amd-threaded_irqs.patch"
+#  "0019-amd_pinctrl-IRQF_NO_THREAD.patch"
   "0020-designware-i2c_IRQF_NO_THREAD.patch"
   "0021-background_reclaim_of_hugepages.patch"
   "0022-patch-5.18-rt11.patch"
@@ -651,7 +652,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'e173eebbce9cbea24db4f150731f1e34341fbb75b8b8be00288243fcdcb8326b'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
             'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
-            '6f9332263bf2e052c5dfab994a5bd6876f227998f1e825c7943c9f2236d2132f'
+            '4f715ec191c760ede34963ea449c2f12cd58813cd0fa3a684297ab0f45c6ff49'
             '8e5edc5ae5282fae35684006f0aeea41c16523dc0482891dc6c15e40e87f6a53'
             '36928ee323a84d8eb75460619b8e2b6493ea6e03f438c0820f73aa79a58cf9b2'
             '2583ef57b52cc782c20fc491e91a0c843f4d3b98d9ca7b3e5e763bb1a217b5f0'
