--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=20
+pkgrel=21
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -137,7 +137,6 @@ source=(
   "0017-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
   "0018-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
   "0019-pinctl-amd-threaded_irqs.patch"
-#  "0019-amd_pinctrl-IRQF_NO_THREAD.patch"
   "0020-designware-i2c_IRQF_NO_THREAD.patch"
   "0021-background_reclaim_of_hugepages.patch"
   "0022-patch-5.18-rt11.patch"
@@ -152,6 +151,7 @@ source=(
   "0033-rtmutex-no-rcu-lock-while-spinning.patch"
   "0034-tk-timekeeping-suspend-fixes.patch"
   "0035-sched-5.19-rc2.patch"
+  "0036-wq-locking-5.19.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -666,5 +666,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '40b64437a72105b2afeab873614fa93e5ab6b6c05d3b0d1981dd9dec935745a4'
             '53bc1fc5f0c44072222c67ce5fa53a729643d5269d391b742bab1834bfe4d313'
             '2b0897c7ce14feef108c856abed79de52a761a3001f9c835e1f857d1ff275ae3'
-            'beed03117075405d7d0cf6c6f4a81045497039e63b62b319de698e91be3a53eb')
+            'beed03117075405d7d0cf6c6f4a81045497039e63b62b319de698e91be3a53eb'
+            'cfe478bcb0155c92f26805131a565396414ae3b11d2db607cc2b059d89b59f83')
 
