--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=21
+pkgrel=23
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -152,6 +152,7 @@ source=(
   "0034-tk-timekeeping-suspend-fixes.patch"
   "0035-sched-5.19-rc2.patch"
   "0036-wq-locking-5.19.patch"
+  "0037-pm-suspend_tk_patches.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -667,5 +668,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '53bc1fc5f0c44072222c67ce5fa53a729643d5269d391b742bab1834bfe4d313'
             '2b0897c7ce14feef108c856abed79de52a761a3001f9c835e1f857d1ff275ae3'
             'beed03117075405d7d0cf6c6f4a81045497039e63b62b319de698e91be3a53eb'
-            'cfe478bcb0155c92f26805131a565396414ae3b11d2db607cc2b059d89b59f83')
+            'cfe478bcb0155c92f26805131a565396414ae3b11d2db607cc2b059d89b59f83'
+            '3534d809265d3037309a3512aa474784d3f0c4e705a6bff910f9b090f5b92aa0')
 
