--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=23
+pkgrel=24
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -153,6 +153,9 @@ source=(
   "0035-sched-5.19-rc2.patch"
   "0036-wq-locking-5.19.patch"
   "0037-pm-suspend_tk_patches.patch"
+  "0038-5.19.x-xhci-fixes.patch"
+  "0039-5.19.x-locking-sched-fixes.patch"
+  "0040-5.19.x-misc-fixes.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -669,5 +672,8 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '2b0897c7ce14feef108c856abed79de52a761a3001f9c835e1f857d1ff275ae3'
             'beed03117075405d7d0cf6c6f4a81045497039e63b62b319de698e91be3a53eb'
             'cfe478bcb0155c92f26805131a565396414ae3b11d2db607cc2b059d89b59f83'
-            '3534d809265d3037309a3512aa474784d3f0c4e705a6bff910f9b090f5b92aa0')
+            'ab460430430dca2f87aff6dfc66f20956002faad6f95110059a765632ddbc2d4'
+            'ebcb4e55f35c2739148c1cd8948d53d8d9a7c0c45826a0aacb26990b308e1fb8'
+            '92c5f9485f8064c47c5b0112c5c0bb9f7307ad67354cc9c10f5acc349427d86f'
+            'dabe773f76ee0c380e7dd80c34f7280cc8c7466f0807cbbf6559a1c6e7600650')
 
