--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=24
+pkgrel=25
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -157,6 +157,9 @@ source=(
   "0039-5.19.x-locking-sched-fixes.patch"
   "0040-5.19.x-misc-fixes.patch"
   "0041-block-ioprio_patchwork.patch"
+  "0042-5.19-rc4-mm-hotfixes.patch"
+  "0043-rtw88-patches.patch"
+  "0044-kthread-cleanups-for-v5.19.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -677,5 +680,8 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'ebcb4e55f35c2739148c1cd8948d53d8d9a7c0c45826a0aacb26990b308e1fb8'
             '92c5f9485f8064c47c5b0112c5c0bb9f7307ad67354cc9c10f5acc349427d86f'
             'dabe773f76ee0c380e7dd80c34f7280cc8c7466f0807cbbf6559a1c6e7600650'
-            '9fc8327573f20bdbb6dbd7b4c5e34475233f9c9d3260c83462da83029b4ba98e')
+            '9fc8327573f20bdbb6dbd7b4c5e34475233f9c9d3260c83462da83029b4ba98e'
+            'b661e46480fda290dc4e309134204b156cc43c416689d0345d051d86e72a43a1'
+            'd795f51899549cd08001896e6114fc4591e694ee2c5f5be67f5fa28b7ad64905'
+            'd9d83c07a2252eff94e9d9c9ee71ba8cee7893b5697db41a2d870dc7182605f4')
 
