--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=25
+pkgrel=26
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -160,6 +160,8 @@ source=(
   "0042-5.19-rc4-mm-hotfixes.patch"
   "0043-rtw88-patches.patch"
   "0044-kthread-cleanups-for-v5.19.patch"
+  "0045-5.19.x-power-pm-em_pm-cpuidle.patch"
+  "0046-sched-fix_bad_task_migration_for_rt_tasks.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -683,5 +685,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '9fc8327573f20bdbb6dbd7b4c5e34475233f9c9d3260c83462da83029b4ba98e'
             'b661e46480fda290dc4e309134204b156cc43c416689d0345d051d86e72a43a1'
             'd795f51899549cd08001896e6114fc4591e694ee2c5f5be67f5fa28b7ad64905'
-            'd9d83c07a2252eff94e9d9c9ee71ba8cee7893b5697db41a2d870dc7182605f4')
+            'd9d83c07a2252eff94e9d9c9ee71ba8cee7893b5697db41a2d870dc7182605f4'
+            'c8493a0614dc55ee01bcba4488f87b3a972fb7cbc1cf48f0766eacb26dd29927'
+            '35dd824d9b7f99637d6383820c6346ee61ca84d5592593d63e45b469aac9b992')
 
