--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=26
+pkgrel=27
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -162,6 +162,7 @@ source=(
   "0044-kthread-cleanups-for-v5.19.patch"
   "0045-5.19.x-power-pm-em_pm-cpuidle.patch"
   "0046-sched-fix_bad_task_migration_for_rt_tasks.patch"
+  "0047-sched-fair-Introduce_SIS_UTIL.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -687,5 +688,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'd795f51899549cd08001896e6114fc4591e694ee2c5f5be67f5fa28b7ad64905'
             'd9d83c07a2252eff94e9d9c9ee71ba8cee7893b5697db41a2d870dc7182605f4'
             'c8493a0614dc55ee01bcba4488f87b3a972fb7cbc1cf48f0766eacb26dd29927'
-            '35dd824d9b7f99637d6383820c6346ee61ca84d5592593d63e45b469aac9b992')
+            '35dd824d9b7f99637d6383820c6346ee61ca84d5592593d63e45b469aac9b992'
+            '8495edc071c9788862568f8869032d7919c147366b2c72a584581d568c351023')
 
