--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=27
+pkgrel=28
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -163,6 +163,7 @@ source=(
   "0045-5.19.x-power-pm-em_pm-cpuidle.patch"
   "0046-sched-fix_bad_task_migration_for_rt_tasks.patch"
   "0047-sched-fair-Introduce_SIS_UTIL.patch"
+  "0048-dma-swiotlb-squashed-5.19-deps-performance-optimizat.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -689,5 +690,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'd9d83c07a2252eff94e9d9c9ee71ba8cee7893b5697db41a2d870dc7182605f4'
             'c8493a0614dc55ee01bcba4488f87b3a972fb7cbc1cf48f0766eacb26dd29927'
             '35dd824d9b7f99637d6383820c6346ee61ca84d5592593d63e45b469aac9b992'
-            '8495edc071c9788862568f8869032d7919c147366b2c72a584581d568c351023')
+            '8495edc071c9788862568f8869032d7919c147366b2c72a584581d568c351023'
+            '5aad892ca987fd73c4f7e3ad487b2ed4e73e4b420acf0fcee9f32a29a6f0b939')
 
