--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=28
+pkgrel=31
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -164,6 +164,7 @@ source=(
   "0046-sched-fix_bad_task_migration_for_rt_tasks.patch"
   "0047-sched-fair-Introduce_SIS_UTIL.patch"
   "0048-dma-swiotlb-squashed-5.19-deps-performance-optimizat.patch"
+ "0049-sched-misc_tip_lkml.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -646,7 +647,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
-            'c40e654acda79419987567cb9f13b8623db6e822a2e333870f147f0d80c4506d'
+            'e884c5df8c1b99b498fd3639a87196bd6190a01bf3f1f08ab0f3430fb5224517'
             '9abdc6c5f40b81c044f5549e8f29d474dc51e2765ee2b5e9a5fba9e62499dd9e'
             '65ec9ac5b8b28d5b61df1c72498059be2e7cb1f9b965bac0e4ffed3c05520b2b'
             '9824cd3a41db040bf28d6538aa4805f869333139cbcf43e0422e1b42f5401270'
@@ -691,5 +692,6 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             'c8493a0614dc55ee01bcba4488f87b3a972fb7cbc1cf48f0766eacb26dd29927'
             '35dd824d9b7f99637d6383820c6346ee61ca84d5592593d63e45b469aac9b992'
             '8495edc071c9788862568f8869032d7919c147366b2c72a584581d568c351023'
-            '5aad892ca987fd73c4f7e3ad487b2ed4e73e4b420acf0fcee9f32a29a6f0b939')
+            '5aad892ca987fd73c4f7e3ad487b2ed4e73e4b420acf0fcee9f32a29a6f0b939'
+            '59f76c17b6bccd08165766c1f5f0c29127994195e679208af0161bb4176bdc2f')
 
