--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=31
+pkgrel=32
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -165,6 +165,10 @@ source=(
   "0047-sched-fair-Introduce_SIS_UTIL.patch"
   "0048-dma-swiotlb-squashed-5.19-deps-performance-optimizat.patch"
  "0049-sched-misc_tip_lkml.patch"
+ "0050-epoll-autoremove_wakers_even_more_aggressively..patch"
+ "0051-mm-highmem_opt_misc.patch"
+ "0052-nvme-5.19-2022-06-30.patch"
+ "0053-amd-drm-fixes-5.19.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -693,5 +697,9 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '35dd824d9b7f99637d6383820c6346ee61ca84d5592593d63e45b469aac9b992'
             '8495edc071c9788862568f8869032d7919c147366b2c72a584581d568c351023'
             '5aad892ca987fd73c4f7e3ad487b2ed4e73e4b420acf0fcee9f32a29a6f0b939'
-            '59f76c17b6bccd08165766c1f5f0c29127994195e679208af0161bb4176bdc2f')
+            '59f76c17b6bccd08165766c1f5f0c29127994195e679208af0161bb4176bdc2f'
+            '430341606ab981d458ea4af5e210e6921e141e20e4bcf9278c0fd83a6b2af1cc'
+            '4d12175b809047d0c17a5dd1afc0d6584b3d99200c025357f4f11cc3e6d04977'
+            'effdf4454a9f74f1e2ba85c624109761a4622c021f2ccf3df3b59f501065f44b'
+            '71a12b7cd539d6cd2bbb477eb4fef0f17e8fc07ad8452c80e463f5b4cc53d390')
 
