--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -107,7 +107,7 @@ _srcname=linux-${_stable}
 #_srcname=linux-${_major}
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=32
+pkgrel=33
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -169,6 +169,8 @@ source=(
  "0051-mm-highmem_opt_misc.patch"
  "0052-nvme-5.19-2022-06-30.patch"
  "0053-amd-drm-fixes-5.19.patch"
+ "0054-rtmutex-Limit_number_of_lock_stealing_for_non-RT_waiters.patch"
+ "0055-schedutil-Fix_deadlock_between_cpuset_and_cpu_hotplug.patch"
 )
 
 if [ -n "$_use_llvm_lto" ]; then
@@ -701,5 +703,7 @@ sha256sums=('ef9ff2dfa5416a03e7e5fd9c308aaec385fe8ff9f4a62d957b167843849659a2'
             '430341606ab981d458ea4af5e210e6921e141e20e4bcf9278c0fd83a6b2af1cc'
             '4d12175b809047d0c17a5dd1afc0d6584b3d99200c025357f4f11cc3e6d04977'
             'effdf4454a9f74f1e2ba85c624109761a4622c021f2ccf3df3b59f501065f44b'
-            '71a12b7cd539d6cd2bbb477eb4fef0f17e8fc07ad8452c80e463f5b4cc53d390')
+            '71a12b7cd539d6cd2bbb477eb4fef0f17e8fc07ad8452c80e463f5b4cc53d390'
+            '603217b4a5d9f107bdb9a844f34e780cd3c13958cf1b4906a362d1e2924a6bb4'
+            'ba640b93b7d4bce58b15ad2232f0547007b725c2f518a8b19902d45632da0a47')
 
